should be final

--- a/Supervised Learning/1. Perceptron/Perceptron.ipynb
+++ b/Supervised Learning/1. Perceptron/Perceptron.ipynb
@@ -163,6 +163,7 @@
     "    Z = clf.predict(np.array([xx1.ravel(), xx2.ravel()]).T)\n",
     "    Z = Z.reshape(xx1.shape)\n",
     "    plt.contourf(xx1, xx2, Z, alpha=0.3, cmap=cmap)\n",
+    "    # Plot the training points\n",
     "    for idx, cl in enumerate(np.unique(y)):\n",
     "        plt.scatter(x=X[y == cl, 0], y=X[y == cl, 1], alpha=0.8, c=colors[idx],\n",
     "                    marker=markers[idx], label=cl)\n"
