--- a/Supervised Learning/3. Logistic Regression/Logistic_Regression.ipynb
+++ b/Supervised Learning/3. Logistic Regression/Logistic_Regression.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ed33e6cf",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
    "source": [
     "# Load Breast Cancer dataset\n",
     "data = load_breast_cancer()\n",
-    "X, y = data.data, data.target  # Features and target\n",
+    "X, y = data.data, data.target\n",
     "\n",
     "# Standardize the features (important for Logistic Regression stability)\n",
     "scaler = StandardScaler()\n",
