--- a/Supervised Learning/8. Ensemble Methods/Ensemble_Methods.ipynb
+++ b/Supervised Learning/8. Ensemble Methods/Ensemble_Methods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5159233c",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "5a5e3d19",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "fc9037f4",
    "metadata": {},
    "outputs": [
@@ -77,6 +77,7 @@
     "    ('lr', clf1), ('dt', clf2), ('knn', clf3)\n",
     "], voting='hard')\n",
     "\n",
+    "# Fit and predict\n",
     "voting_clf.fit(X_train, y_train)\n",
     "y_pred_voting = voting_clf.predict(X_test)\n",
     "acc_voting = accuracy_score(y_test, y_pred_voting)\n",
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "4bd66a93",
    "metadata": {},
    "outputs": [
@@ -105,6 +106,7 @@
     "    n_estimators=100,\n",
     "    random_state=42\n",
     ")\n",
+    "# Fit and predict\n",
     "bagging_clf.fit(X_train, y_train)\n",
     "y_pred_bagging = bagging_clf.predict(X_test)\n",
     "acc_bagging = accuracy_score(y_test, y_pred_bagging)\n",
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "097b834a",
    "metadata": {},
    "outputs": [
@@ -121,7 +123,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Improved AdaBoost Accuracy: 0.9417\n"
+      "AdaBoost Accuracy: 0.9417\n"
      ]
     }
    ],
@@ -130,18 +132,19 @@
     "adaboost_clf = AdaBoostClassifier(\n",
     "    estimator=DecisionTreeClassifier(max_depth=3),\n",
     "    n_estimators=100,\n",
-    "    algorithm='SAMME',  # Optional: use this if you want to silence future warnings\n",
+    "    algorithm='SAMME',\n",
     "    random_state=42\n",
     ")\n",
+    "# Fit and predict\n",
     "adaboost_clf.fit(X_train, y_train)\n",
     "y_pred_adaboost = adaboost_clf.predict(X_test)\n",
     "acc_adaboost = accuracy_score(y_test, y_pred_adaboost)\n",
-    "print(f\"Improved AdaBoost Accuracy: {acc_adaboost:.4f}\")\n"
+    "print(f\"AdaBoost Accuracy: {acc_adaboost:.4f}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "1726cc63",
    "metadata": {},
    "outputs": [
@@ -165,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "511fb281",
    "metadata": {},
    "outputs": [
@@ -211,7 +214,7 @@
     }
    ],
    "source": [
-    "\n",
+    "# Function to plot confusion matrices\n",
     "def plot_conf_matrix(y_true, y_pred, title):\n",
     "    plt.figure(figsize=(7,5))\n",
     "    sns.heatmap(confusion_matrix(y_true, y_pred), annot=True, fmt=\"d\", cmap=\"Blues\")\n",
@@ -228,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "c1a9701e",
    "metadata": {},
    "outputs": [
@@ -253,7 +256,26 @@
       "    accuracy                           0.97       360\n",
       "   macro avg       0.97      0.97      0.97       360\n",
       "weighted avg       0.97      0.97      0.97       360\n",
-      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print classification reports\n",
+    "print(\"=== Classification Report: Hard Voting ===\")\n",
+    "print(classification_report(y_test, y_pred_voting))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c217d21f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "=== Classification Report: Bagging ===\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -271,7 +293,26 @@
       "    accuracy                           0.93       360\n",
       "   macro avg       0.93      0.92      0.92       360\n",
       "weighted avg       0.93      0.93      0.92       360\n",
-      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print classification reports\n",
+    "print(\"=== Classification Report: Bagging ===\")\n",
+    "print(classification_report(y_test, y_pred_bagging))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e0d19614",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "=== Classification Report: AdaBoost ===\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -289,7 +330,26 @@
       "    accuracy                           0.94       360\n",
       "   macro avg       0.95      0.94      0.94       360\n",
       "weighted avg       0.95      0.94      0.94       360\n",
-      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print classification reports\n",
+    "print(\"=== Classification Report: AdaBoost ===\")\n",
+    "print(classification_report(y_test, y_pred_adaboost))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2c04f896",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "=== Classification Report: Gradient Boosting ===\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -312,18 +372,9 @@
     }
    ],
    "source": [
-    "\n",
-    "print(\"=== Classification Report: Hard Voting ===\")\n",
-    "print(classification_report(y_test, y_pred_voting))\n",
-    "\n",
-    "print(\"=== Classification Report: Bagging ===\")\n",
-    "print(classification_report(y_test, y_pred_bagging))\n",
-    "\n",
-    "print(\"=== Classification Report: AdaBoost ===\")\n",
-    "print(classification_report(y_test, y_pred_adaboost))\n",
-    "\n",
+    "# Print classification reports\n",
     "print(\"=== Classification Report: Gradient Boosting ===\")\n",
-    "print(classification_report(y_test, y_pred_gb))\n"
+    "print(classification_report(y_test, y_pred_gb))"
    ]
   }
  ],
