--- a/Unsupervised Learning/3. Principal Component Analysis/PCA.ipynb
+++ b/Unsupervised Learning/3. Principal Component Analysis/PCA.ipynb
@@ -14,14 +14,12 @@
     "from sklearn import datasets\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
-    "\n",
-    "from mpl_toolkits.mplot3d import Axes3D  # noqa: F401 for 3D plotting\n",
-    "sns.set(style=\"whitegrid\")\n"
+    "from mpl_toolkits.mplot3d import Axes3D"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0970b7e9",
    "metadata": {},
    "outputs": [
@@ -43,6 +41,7 @@
     "scaler = StandardScaler()\n",
     "X_scaled = scaler.fit_transform(X)\n",
     "\n",
+    "# Print original data shape\n",
     "print(\"Original data shape:\", X.shape)\n"
    ]
   },
@@ -83,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b7dbf879",
    "metadata": {},
    "outputs": [
@@ -104,6 +103,7 @@
     "pca_2d = PCA(n_components=2)\n",
     "X_pca_2d = pca_2d.fit_transform(X_scaled)\n",
     "\n",
+    "# Plot 2D PCA visualization\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.scatterplot(x=X_pca_2d[:, 0], y=X_pca_2d[:, 1], hue=y, palette=\"tab10\", s=50)\n",
     "plt.title(\"Digits Dataset in 2D PCA Space\")\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "91d6c260",
    "metadata": {},
    "outputs": [
@@ -136,6 +136,7 @@
     "pca_3d = PCA(n_components=3)\n",
     "X_pca_3d = pca_3d.fit_transform(X_scaled)\n",
     "\n",
+    "# Plot 3D PCA visualization\n",
     "fig = plt.figure(figsize=(10, 7))\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
     "scatter = ax.scatter(X_pca_3d[:, 0], X_pca_3d[:, 1], X_pca_3d[:, 2], c=y, cmap='tab10', s=30)\n",
