--- a/Unsupervised Learning/4. Singular Value Decomposition/SVD.ipynb
+++ b/Unsupervised Learning/4. Singular Value Decomposition/SVD.ipynb
@@ -49,12 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2b551d8d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# Function to perform SVD compression\n",
     "def svd_compress(image, k):\n",
     "    # Perform SVD\n",
     "    U, S, VT = np.linalg.svd(image, full_matrices=False)\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "febe10d0",
    "metadata": {},
    "outputs": [
@@ -123,15 +123,17 @@
     }
    ],
    "source": [
-    "\n",
+    "# Compute error for different values of k\n",
     "errors = []\n",
-    "ks = list(range(1, 65))  # max rank is 64 for 8x8\n",
+    "ks = list(range(1, 65))\n",
     "\n",
+    "# Compute error for different values of k\n",
     "for k in ks:\n",
     "    approx = svd_compress(image, k)\n",
     "    error = np.linalg.norm(image - approx)\n",
     "    errors.append(error)\n",
     "\n",
+    "# Plot error vs. k\n",
     "plt.figure(figsize=(8, 4))\n",
     "plt.plot(ks, errors, marker='o')\n",
     "plt.title(\"Reconstruction Error vs. Number of Singular Values\")\n",
