--- a/Supervised Learning/4. Neural Networks/Neural Networks.ipynb
+++ b/Supervised Learning/4. Neural Networks/Neural Networks.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c00e6f77",
    "metadata": {},
    "outputs": [
@@ -35,8 +35,8 @@
    "source": [
     "\n",
     "# Load IMDB dataset\n",
-    "vocab_size = 10000  # Limit vocabulary to 10,000 words\n",
-    "max_length = 200  # Limit sequence length\n",
+    "vocab_size = 10000\n",
+    "max_length = 200\n",
     "\n",
     "(x_train, y_train), (x_test, y_test) = keras.datasets.imdb.load_data(num_words=vocab_size)\n",
     "\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a0bf0dcd",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
    ],
    "source": [
     "\n",
-    "# Build an Improved Sequential Model\n",
+    "# Build an sequential Model\n",
     "model = keras.Sequential([\n",
     "    keras.layers.Embedding(input_dim=vocab_size, output_dim=256),  # Increased embedding size from 128 to 256\n",
     "    keras.layers.Bidirectional(keras.layers.LSTM(64, return_sequences=False)),  # Added Bidirectional LSTM\n",
