--- a/Supervised Learning/5. K-Nearest Neighbors/K-Nearest_Neighbors.ipynb
+++ b/Supervised Learning/5. K-Nearest Neighbors/K-Nearest_Neighbors.ipynb
@@ -90,6 +90,7 @@
     "# Try different k values using cross-validation\n",
     "from sklearn.model_selection import KFold\n",
     "\n",
+    "# Define cross-validation function\n",
     "def knn_cross_validation(X, y, k_values, n_folds=5):\n",
     "    kf = KFold(n_splits=n_folds, shuffle=True, random_state=42)\n",
     "    results = {}\n",
