--- a/Supervised Learning/1. Perceptron/Perceptron.ipynb
+++ b/Supervised Learning/1. Perceptron/Perceptron.ipynb
@@ -83,18 +83,21 @@
     "                y_i = y_shuffled[idx]\n",
     "                margin = y_i * (np.dot(x_i, self.weights) + self.bias)\n",
     "\n",
-    "                if margin <= 0:  # Update condition based on margin\n",
+    "                # Update condition based on margin\n",
+    "                if margin <= 0: \n",
     "                    self.weights += self.lr * y_i * x_i\n",
     "                    self.bias += self.lr * y_i\n",
     "                    updates_made = True\n",
     "\n",
-    "            if not updates_made:  # Early stopping\n",
+    "            # Early stopping\n",
+    "            if not updates_made: \n",
     "                break\n",
     "\n",
     "    # Make predictions\n",
     "    def predict(self, X):\n",
     "        linear_output = np.dot(X, self.weights) + self.bias\n",
-    "        return np.where(linear_output >= 0, 1, -1)  # Clearer prediction rule"
+    "        # Clearer prediction rule\n",
+    "        return np.where(linear_output >= 0, 1, -1)"
    ]
   },
   {
