--- a/Supervised Learning/2. Linear Regression/Linear_Regression.ipynb
+++ b/Supervised Learning/2. Linear Regression/Linear_Regression.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "32c4374a",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,8 @@
    "source": [
     "# Load California housing dataset\n",
     "data = fetch_california_housing()\n",
-    "X, y = data.data, data.target  # Features and target\n",
+    " # Features and target\n",
+    "X, y = data.data, data.target\n",
     "\n",
     "# Standardize the features (important for Linear Regression stability)\n",
     "scaler = StandardScaler()\n",
