--- a/Supervised Learning/7. Random Forests/Random_Forests.ipynb
+++ b/Supervised Learning/7. Random Forests/Random_Forests.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c04cfaec",
    "metadata": {},
    "outputs": [
@@ -197,6 +197,7 @@
     "    'max_features': ['sqrt', 'log2']\n",
     "}\n",
     "\n",
+    "# Perform grid search\n",
     "grid_search = GridSearchCV(RandomForestClassifier(random_state=42), param_grid, cv=5, scoring='accuracy')\n",
     "grid_search.fit(X_train, y_train)\n",
     "\n",
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "eceb6ca7",
    "metadata": {},
    "outputs": [
@@ -258,7 +259,8 @@
     "\n",
     "# Plot a few misclassified images\n",
     "plt.figure(figsize=(10,6))\n",
-    "for i, idx in enumerate(misclassified[:9]):  # Show 9 misclassified images\n",
+    "# Show 9 misclassified images\n",
+    "for i, idx in enumerate(misclassified[:9]): \n",
     "    plt.subplot(3,3,i+1)\n",
     "    plt.imshow(X_test[idx].reshape(8,8), cmap='gray')\n",
     "    plt.title(f\"True: {y_test[idx]}, Pred: {y_pred[idx]}\")\n",
